--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         </ul>
                     </li>
                     <li><a href="ODSSectoresProductivos.html"> ODS en los sectores productivo</a></li>
+                    <li><a href="EconomiaCircular.html"> Economía Circular</a></li>
                 </ul>
             </nav>
         </div>
